# RustWebApp

./: .env  .gitignore  README.md
migrations/2022-09-25-143114_web-appdb/: up.sql
migrations/2022-09-28-142339_web-app/: down.sql  up.sql
migrations/2022-10-01-155318_web-app/: down.sql  up.sql
web-app/: Cargo.toml
web-app/migrations/2022-09-28-142339_web-app/: up.sql
web-app/src/: main.rs  models.rs  schema.rs
web-app/styles/: style.css
web-app/templates/: base.html  index.html  login.html  post.html  register.html  thread.html  user.html
