[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-identity = "^0.3.1"
tera = "1"
serde = "^1"
dotenv = "^0.15"
diesel = { verion = "^1.4.4", features = ["postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

#For security
tokio = "^1.8.4"
regex = "^1.5.5"
thread_local = "^1.1.4"
